quicklog/tests/failures/struct_missing_serialize.stderr
error[E0599]: the method `buffer_size_required` exists for tuple `(&NoSerializeStruct,)`, but its trait bounds were not satisfied
  --> tests/failures/struct_missing_serialize.rs:16:5
   |
16 |     info!(s, "struct does not implement Serialize");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ method cannot be called on `(&NoSerializeStruct,)` due to unsatisfied trait bounds
   |
   = note: the following trait bounds were not satisfied:
           `&NoSerializeStruct: quicklog::serialize::Serialize`
           which is required by `(&NoSerializeStruct,): quicklog::serialize::Serialize`
   = note: this error originates in the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `NoSerializeStruct: quicklog::serialize::Serialize` is not satisfied
  --> tests/failures/struct_missing_serialize.rs:16:5
   |
16 |     info!(s, "struct does not implement Serialize");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `quicklog::serialize::Serialize` is not implemented for `NoSerializeStruct`
   |
   = help: the following other types implement trait `quicklog::serialize::Serialize`:
             bool
             char
             isize
             i8
             i16
             i32
             i64
             i128
           and $N others
   = note: required for `&NoSerializeStruct` to implement `quicklog::serialize::Serialize`
   = note: required for `(&NoSerializeStruct,)` to implement `SerializeTpl`
note: required by a bound in `_decode_fn`
  --> tests/failures/struct_missing_serialize.rs:16:5
   |
16 |     info!(s, "struct does not implement Serialize");
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `_decode_fn`
   = note: this error originates in the macro `info` (in Nightly builds, run with -Z macro-backtrace for more info)
